# mojo-marimo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  WARP.md  justfile  pixi.toml  pyproject.toml
.github/workflows/: ci.yml.OFF
benchmarks/: README.md  execution_approaches.py  execution_approaches_OLD.py  mojo_implementations.py  python_baseline.py  python_vs_mojo.py  uncached_executor.py
docs/: COMPILED_LANGUAGES.md  FEEDBACK_REQUESTED.md  MARIMO_ANNOUNCEMENT.md  MODULAR_FORUM_ANNOUNCEMENT.md  ROADMAP.md  SUMMARY.md  blog_post_draft.md  forum_response_maturin.md  reddit_marimo_post.md
docs/project/: CHANGELOG.md  CONTRIBUTING.md  README.md  REVIEW_SUMMARY.md
examples/: EXTENSION_MODULES.md  __init__.py  examples.py  extension_module_example.mojo  fibonacci_mojo_ext.mojo  mandelbrot.mojo  mandelbrot_ext.mojo  monte_carlo.mojo  monte_carlo_ext.mojo
examples/reference/: 01_hello.mojo  02_fibonacci.mojo  03_compute.mojo
notebooks/: benchmark_notebook.py  decorator_notebook.py  example_notebook.py  executor_notebook.py  interactive_learning.py  mandelbrot_decorator.py  mandelbrot_executor.py  mandelbrot_extension.py  monte_carlo_decorator.py  monte_carlo_executor.py  monte_carlo_extension.py  pattern_decorator.py  pattern_executor.py  pattern_extension.py
notebooks/gpu_puzzles/: 01_hello_threads.py  README.md  gpu_puzzles_utils_jupyter.py  gpu_puzzles_utils_marimo.py  helpers.py  index.py  p01_edited.mojo  p01_jupy_edited.mojo  p01_kernel_code.mojo
notebooks/gpu_puzzles/p01/: p01_hello_threads.py
notebooks/gpu_puzzles/p01/mojo/: p01_edited.mojo  p01_main.mojo  p01_setup.mojo
notebooks/gpu_puzzles/p02/: p02_zip.py
notebooks/gpu_puzzles/p02/mojo/: p02_kernel.mojo  p02_main.mojo  p02_setup.mojo  p02_solution.mojo
notebooks/jupyter/: README.md  monte_carlo_decorator.py  monte_carlo_executor.py  monte_carlo_extension.py  pattern_decorator.py  pattern_executor.py
scripts/: verify_setup.py
src/mojo_marimo/: __init__.py  compute.mojo  compute_wrapper.py  decorator.py  examples.py  executor.py  mo_run_cached.py  mojo_decorator.py  test_all_approaches.py  validator.py
src/py_run_mojo/: __init__.py  decorator.py  executor.py  validator.py
tests/: conftest.py  test_decorator.py  test_executor.py  test_imports.py  test_reference_examples.py  test_validator_errors.py
