[project]
name = "mojo-marimo"
version = "0.1.0"
description = "Interactive Mojo integration for Python notebooks - three patterns for running high-performance Mojo code from marimo"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {text = "Apache-2.0"}
keywords = ["mojo", "marimo", "notebooks", "performance", "interactive-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "marimo",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.urls]
Homepage = "https://github.com/databooth/mojo-marimo"
Documentation = "https://github.com/databooth/mojo-marimo/blob/main/README.md"
Repository = "https://github.com/databooth/mojo-marimo"
Issues = "https://github.com/databooth/mojo-marimo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mojo_marimo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/mojo_marimo --cov-report=term-missing"

[tool.ty]
# ty configuration
# Run with: uvx ty check
# Or add to project: uv add --dev ty
