[project]
name = "py-run-mojo"
version = "0.1.2"
description = "Run high-performance Mojo code from Python - three patterns for any environment"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {text = "Apache-2.0"}
keywords = ["mojo", "marimo", "notebooks", "performance", "interactive-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "ipykernel>=7.1.0",
    "marimo",
    "mojo",
    "numpy>=2.4.1",
    "plotly>=6.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.urls]
Homepage = "https://github.com/databooth/py-run-mojo"
Documentation = "https://github.com/databooth/py-run-mojo/blob/main/README.md"
Repository = "https://github.com/databooth/py-run-mojo"
Issues = "https://github.com/databooth/py-run-mojo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_run_mojo"]
include = ["examples/**"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/py_run_mojo --cov-report=term-missing"

[tool.ty]
# ty configuration - run with: uv run ty check

[tool.ty.rules]
# Allow stub functions with return types in decorator pattern
invalid-return-type = "ignore"
# Allow func.__name__ in decorator (it's safe for our use case)
unresolved-attribute = "ignore"

[dependency-groups]
dev = [
    "jupytext>=1.19.0",
    "nbformat>=5.10.4",
    "notebook>=7.5.2",
    "hatch>=1.9.0",
]

[tool.hatch.publish.pypi]
repository = "https://upload.pypi.org/legacy/"

[tool.hatch.publish.testpypi]
repository = "https://test.pypi.org/legacy/"
